--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -1,4 +1,5 @@
 \input{../TeX/base} %BASE!!!
+\usepackage{multirow}
 
 \title{\TITOLODOC}
 \author{Mirco Geremia}
@@ -119,6 +120,8 @@ Versione: \insertversion
 		\label{tabverifica}
 	\end{center}
 \end{table}
+
+\newpage 
 	
 \section*{\LARGE Approvazione:}
 
