--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -1173,7 +1173,8 @@ Usato da \textit{SVGWriter} per realizzare il documento SVG.
 \paragrafo{Attributi privati:}
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] \textit{{\_}doc} stringa che rappresenta il documento in costruzione.
-Per maggiori dettagli si veda il diagramma di stato: \newpage[TODO: ins. lebel].
+Per maggiori dettagli si veda il diagramma di stato: \newpage
+
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.7]{svgdocument.png}
