--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -738,7 +738,13 @@ Legge e modifica \textit{TextString}.
 
 %%%%%%%%Parte Dissegna
 \sezione{Specifica delle componenti - ApplicationLogic}
-Gestisce completamente le figure: il disegno, la conversione da e verso \underline{SVG}, le loro propriet\`a, la loro manipolazione e creazione. Utilizza le interfacce messe a disposizione dallo strato server e offre le proprie funzionalit\`a allo strato GUI.
+Gestisce completamente le figure: il disegno, la conversione da e verso \underline{SVG}, le loro propriet\`a, la loro manipolazione e creazione. Utilizza le interfacce messe a disposizione dallo strato server e offre le proprie funzionalit\`a allo strato GUI. Nel grafico in figura 1 si riportano le classi per la gestione delle figure con le loro relazioni. Nel diagramma non si mostrano attributi e metodi in quanto ampiamente descritti testualmente in seguito.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.5]{applogic_figures.png}
+\caption{Classi e loro relazioni - gestione figure}
+\end{figure}
 
 \subsezione{Figure}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
